Specific scene multiple case crashes, but mostly on render #50851

Closed
opened 2017-03-04 12:08:19 +01:00 by Vik · 7 comments

System Information
Win7 x64 8GB , Radeon R9 270 , PhenomII 1090T x6

Blender Version
Broken: 2.78 e8299c8(Steam) - 6b9d73e(official buildbot),
Worked: -

Short description of error
Attached scene crash blender randomly on most any action - sometime on objects movement, changing viewport mode, save/reloading, and rendering
Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Stable repeatable:
I.

  1. Load scene wall_12_fin2_packed.blend
  2. Press F12 to start renderng - it begin to load resources/build bvh and then crash

Unknown repeatability:
II.
2) press alt+z to change viewport mode

III.
2) resave scene with another name
3) ? close blender
4) try open blender and saved scene

**System Information** Win7 x64 8GB , Radeon R9 270 , PhenomII 1090T x6 **Blender Version** Broken: 2.78 e8299c8(Steam) - 6b9d73e(official buildbot), Worked: - **Short description of error** Attached scene crash blender randomly on most any action - sometime on objects movement, changing viewport mode, save/reloading, and rendering **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Stable repeatable: I. 1) Load scene [wall_12_fin2_packed.blend](https://archive.blender.org/developer/F502007/wall_12_fin2_packed.blend) 2) Press F12 to start renderng - it begin to load resources/build bvh and then crash ------------------------------------------------------------------------- Unknown repeatability: II. 2) press alt+z to change viewport mode III. 2) resave scene with another name 3) ? close blender 4) try open blender and saved scene
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @V-11

Added subscriber: @V-11

Added subscribers: @PatriceBertrand, @mano-wii, @mont29, @Sergey

Added subscribers: @PatriceBertrand, @mano-wii, @mont29, @Sergey

Can confirm the issue. It seems to be caused by array modifier delivering broken topology. This screws up boolean modifier here and could potentially break other areas of blender. So this is first thing to be fixed before we can check if there are more issues here.

I've simplified the case to a single object: wall_12_fin2_packed_simple.blend You can apply modifier and run mesh validation and you'll see lots of unused loops.

@mano-wii, @mont29 or maybe @PatriceBertrand can help having a look here? :)

Can confirm the issue. It seems to be caused by array modifier delivering broken topology. This screws up boolean modifier here and could potentially break other areas of blender. So this is first thing to be fixed before we can check if there are more issues here. I've simplified the case to a single object: [wall_12_fin2_packed_simple.blend](https://archive.blender.org/developer/F505952/wall_12_fin2_packed_simple.blend) You can apply modifier and run mesh validation and you'll see lots of unused loops. @mano-wii, @mont29 or maybe @PatriceBertrand can help having a look here? :)
Bastien Montagne was assigned by Sergey Sharybin 2017-05-15 16:03:18 +02:00

Quick fix: use a correct merge distance, compatible with your mesh level of details! Here 0.01 is way to high and eats several initial loops of next copy, 0.001 seems to work properly.

Will check why merge generates invalid geometry, though…

Quick fix: use a correct merge distance, compatible with your mesh level of details! Here `0.01` is way to high and eats several initial loops of next copy, `0.001` seems to work properly. Will check why merge generates invalid geometry, though…

This issue was referenced by 4d58080e23

This issue was referenced by 4d58080e235b8cde0c9a70542328135415b207b5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50851
No description provided.